--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Quicksand:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --font-quicksand: "Quicksand", sans-serif;
-  --font-space-mono: "Space Mono", monospace;
-  --font-outfit: "Outfit", sans-serif;
+  --font-lexend-deca: "Lexend Deca", sans-serif;
+  --font-source-code-pro: "Source Code Pro", monospace;
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -119,6 +118,6 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground font-quicksand;
+    @apply bg-background text-foreground font-source-code-pro;
   }
 }
